--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "i": "^0.3.6",
+    "lodash": "^4.17.21",
+    "npm": "^7.19.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-easy-toast": "^2.0.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
