--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~42.0.0",
+    "expo-image-picker": "^10.2.2",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "i": "^0.3.6",
